--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.13.1 (unreleased)
 -------------------
 
-- Add a raw text module.
+- Add a raw text module (ZON-2826).
 
 
 3.13.0 (2016-02-16)
