--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.14.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.14 (2016-03-03)
 -----------------
 
