--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.14.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Change ``is_instant_article`` default to False.
 
 
 3.14 (2016-03-03)
