--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.14.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Improve wording (ZON-2826).
 
 
 3.14.1 (2016-03-09)
