--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.15.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.15.1 (2016-03-10)
 -------------------
 
