--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.15.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Add colorpicker for article teaser images (ZON-2898).
 
 
 3.15.1 (2016-03-10)
