--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ zeit.content.article changes
 
 - Add colorpicker for article teaser images (ZON-2898).
 
+- Support separate facebook text for campus (ZON-2930).
+
 
 3.15.1 (2016-03-10)
 -------------------
