--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.15.3 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.15.2 (2016-04-07)
 -------------------
 
