--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.15.4 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix styling of teaser image search button (BUG-146).
 
 
 3.15.3 (2016-04-08)
