--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.15.6 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.15.5 (2016-04-18)
 -------------------
 
