--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.15.6 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Make ``ICitation.attribution`` non-required (ZON-2962).
 
 
 3.15.5 (2016-04-18)
