--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.15.7 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.15.6 (2016-04-20)
 -------------------
 
