--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,11 @@
 zeit.content.article changes
 ============================
 
-3.15.8 (unreleased)
+3.16.0 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Implement separate editable area ``IHeaderArea`` to contain one
+  module for the header (ZON-2871).
 
 
 3.15.7 (2016-04-26)
