--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.17.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.17.0 (2016-06-10)
 -------------------
 
