--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.20.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.20.1 (2016-07-21)
 -------------------
 
