--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.20.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Always edit keywords of an article in a separate fold. (ZON-2882)
 
 
 3.20.1 (2016-07-21)
