--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ zeit.content.article changes
 
 - Extend product config to fix source configuration for testing. (ZON-3171)
 
+- Adjust CSS for images to preview them more like Friedbert. (ZON-3216)
+
 
 3.20.1 (2016-07-21)
 -------------------
