--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.20.5 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.20.4 (2016-08-04)
 -------------------
 
