re ZON-3213: Add fw-compat for push notifications, since `parse` will be removed in 2017.
- `parse` shuts down it's service in January 2017
- message configs registered under `parse` still work due to bw-compat,
  but we should register new messages using the type `mobile`
- adjust test to use the `urbanairship` push service, which replaces `parse`

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ zeit.content.article changes
 3.20.5 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Implement fw-compat for mobile push notifications, since `parse` will be
+  removed in 2017. (ZON-3213)
 
 
 3.20.4 (2016-08-04)
