--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ zeit.content.article changes
 3.20.6 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Count `KEY_UNKNOWN` as dirty, since e.g. `-` or umlauts are mapped to this,
+  thus they did not trigger a save previously.
 
 
 3.20.5 (2016-08-09)
