--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.20.7 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.20.6 (2016-08-12)
 -------------------
 
