Back to development: 3.21.1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.21.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.21.0 (2016-09-02)
 -------------------
 
