ZON-3088: Only set main_image_variant_name on checkout when it's unset.
We're giving up the optimization for legacy articles (that still have
layout instead of display_mode), but we have no other way of knowing
whether the variant_name was set or not.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.21.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Only set main_image_variant_name on checkout when it's unset.
 
 
 3.21.0 (2016-09-02)
