--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.21.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.21.1 (2016-09-07)
 -------------------
 
