--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.21.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Make keywords optional in forms, too, not only validation.
 
 
 3.21.1 (2016-09-07)
