--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.21.4 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-3323: Disable ``Article.is_amp`` if ``Article.access`` is not ``free``.
 
 
 3.21.3 (2016-09-13)
