--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.21.5 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.21.4 (2016-10-19)
 -------------------
 
