--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.21.5 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-3576: Add commentsPremoderate property
 
 
 3.21.4 (2016-10-19)
