--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.21.6 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.21.5 (2017-01-18)
 -------------------
 
