--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.21.7 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- MAINT: Update to zeit.push API changes after parse.com shutdown
 
 
 3.21.6 (2017-01-26)
