--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.21.8 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.21.7 (2017-01-31)
 -------------------
 
