ZON-3430: Normalize quotation marks in teaser
(PR #29)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.21.8 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-3430: Normalize quotation marks in teaser
 
 
 3.21.7 (2017-01-31)
