--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.21.10 (unreleased)
+--------------------
+
+- Nothing changed yet.
+
+
 3.21.9 (2017-02-16)
 -------------------
 
