--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.21.11 (unreleased)
+--------------------
+
+- Nothing changed yet.
+
+
 3.21.10 (2017-02-17)
 --------------------
 
