--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.21.11 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- BUG-669: Serialize empty local text in portraitbox module correctly
 
 
 3.21.10 (2017-02-17)
