Back to development: 3.21.12

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.21.12 (unreleased)
+--------------------
+
+- Nothing changed yet.
+
+
 3.21.11 (2017-03-06)
 --------------------
 
