--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.21.12 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- ZON-3792: Put ``access`` widget behind feature toggle ``zeit.cms.rr-access``
 
 
 3.21.11 (2017-03-06)
