--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.21.14 (unreleased)
+--------------------
+
+- Nothing changed yet.
+
+
 3.21.13 (2017-05-05)
 --------------------
 
