--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 zeit.content.article changes
 ============================
 
-3.21.14 (unreleased)
---------------------
+3.22.0 (unreleased)
+-------------------
 
-- Nothing changed yet.
+- BUG-669: Set up portraitbox module properly
 
 
 3.21.13 (2017-05-05)
