--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.24.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- BUG-500: Update to new dependency API
 
 
 3.24.1 (2017-07-17)
