--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ zeit.content.article changes
 3.24.2 (unreleased)
 -------------------
 
+- BUG-133: Hide the whole "breaking news" info, not just the retract button
+  when the banner doesn't match anymore
+
 - BUG-500: Update to new dependency API
 
 
