--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ zeit.content.article changes
 3.21.14 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- BUG-133: Hide the whole "breaking news" info, not just the retract button
+  when the banner doesn't match anymore
 
 
 3.21.13 (2017-05-05)
