--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.21.14 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- ZON-3920: Disable FBIA if content is not free
 
 
 3.21.13 (2017-05-05)
