--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.23.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-3950: Leave other workflow checkboxes alone when checking `urgent`
 
 
 3.23.0 (2017-06-09)
