--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.23.2 (unreleased)
+-------------------
+
+- ZON-3950: Leave other workflow checkboxes alone when checking `urgent`
+
+
 3.23.1 (2017-06-12)
 -------------------
 
