--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.23.3 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.23.2 (2017-06-22)
 -------------------
 
