--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.23.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- MAINT: Remove obsolete banner control files (wrapper, ios-legacy)
 
 
 3.23.2 (2017-06-22)
