--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,11 @@ zeit.content.article changes
 - BUG-133: Hide the whole "breaking news" info, not just the retract button
   when the banner doesn't match anymore
 
+3.23.3 (2017-06-26)
+-------------------
+
+- MAINT: Remove obsolete banner control files (wrapper, ios-legacy)
+
 
 3.23.2 (2017-06-22)
 -------------------
