--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.23.4 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- BUG-743: Ignore empty imagegroups in IElementReferences
 
 
 3.23.3 (2017-06-26)
