--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,13 +1,19 @@
 zeit.content.article changes
 ============================
 
-3.24.0 (unreleased)
+3.25.0 (unreleased)
 -------------------
 
 - ZON-4006: Move mobile fields to their own form
 
 - BUG-133: Hide the whole "breaking news" info, not just the retract button
   when the banner doesn't match anymore
+
+
+3.24.0 (2017-07-05)
+-------------------
+
+- ZON-4054: Add marker interfaces for error pages
 
 
 3.23.4 (2017-06-29)
