--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.24.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- MAINT: Remove obsolete feature toggle ``zeit.cms.rr-access``
 
 
 3.24.0 (2017-07-05)
