--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.24.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.24.1 (2017-07-17)
 -------------------
 
