--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.25.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.25.0 (2017-08-07)
 -------------------
 
