Back to development: 3.25.3

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.25.3 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.25.2 (2017-08-08)
 -------------------
 
