Add functionality to find the first citation in an article.
It is used in friedbert and in z.c.cp as well for the quote teaser.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.25.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ARBEIT-104: Add function to find first citation in article
 
 
 3.25.2 (2017-08-08)
