ZON-4152: Set `is_amp` for breaking news articles

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.26.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-4152: Set `is_amp` for breaking news articles
 
 
 3.26.0 (2017-08-14)
