--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ zeit.content.article changes
 3.26.1 (unreleased)
 -------------------
 
+- ZON-4152: Add `commentsPremoderate` field to breaking news form
+
 - ZON-4152: Set `is_amp` for breaking news articles
 
 
