--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.26.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.26.1 (2017-08-21)
 -------------------
 
