--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.27.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.27.1 (2017-09-07)
 -------------------
 
