--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.27.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- MAINT: Add `IArticle.body` convenience helper
 
 
 3.27.1 (2017-09-07)
