--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.28.4 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.28.3 (2017-09-14)
 -------------------
 
