ZON-3409: Async Tasks with Celery (#24)
* ZON-3409: Rewrite `remove_if_not_published` as async celery task.

* ZON-3409: Just test, that a countdown was passed to the celery task.

* ZON-3451: Trigger celery in the correct context.

browser.open() would do this, too, but there the site and interaction are
already reset leading to an error.

* ZON-3451: Trigger celery instead of old remote task.

* ZON-3451: Celery tasks are now triggered inline in tests.

* ZON-3409: Re-fetch the object from the repository to keep it consistent.

Otherwise it has both ILocalContent and IRepositoryContent.

* ZON-3513: Use z3c.celery for the async tasks.

* ZON-3515 Adapt test to celery worker.

* We cannot use an actual worker here as the MockConnector does not persist the changes when used in a different process.
* Additionally we have no ZEO setup for the tests which would be needed as we publish multiple objects in `setUp()` simultaneously.

* ZON-3453: Remove calls to no longer existing function.

* ZON-3453: Explicitly declare the queue to be used.

* ZON-3514: Remove lovely.remotetask, as it is no longer needed.

* ZON-3561: Move time based jobs to their own queue.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,11 +1,10 @@
 zeit.content.article changes
 ============================
 
-
 3.29.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-3409: Move from remotetask to celery
 
 
 3.29.0 (2017-09-28)
