--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.30.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.30.0 (2017-10-04)
 -------------------
 
