--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.30.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-4180: Use eta instead of countdown for scheduling
 
 
 3.30.0 (2017-10-04)
