--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.30.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- MAINT: Remove obsolete modules: audio
 
 
 3.30.1 (2017-10-09)
