Back to development: 3.31.1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.31.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.31.0 (2017-10-19)
 -------------------
 
