--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.32.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.32.0 (2017-10-20)
 -------------------
 
