--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.32.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-4289: Add constraint for news table box block
 
 
 3.32.1 (2017-11-01)
