--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.33.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.33.1 (2018-01-26)
 -------------------
 
