--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.34.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.34.0 (2018-01-29)
 -------------------
 
