--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.34.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- MAINT: Remove Google News keyword suggestions, it's not used anymore
 
 
 3.34.0 (2018-01-29)
