--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.34.4 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.34.3 (2018-03-15)
 -------------------
 
