--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.34.5 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- SSL-159: Add puzzleform block
 
 
 3.34.4 (2018-03-21)
