--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.35.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.35.0 (2018-03-22)
 -------------------
 
