--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.35.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-4541: Add new checkbox to hide ligatus recommendations
 
 
 3.35.0 (2018-03-22)
