--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 zeit.content.article changes
 ============================
 
-3.36.1 (unreleased)
+3.37.0 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-4476: Add "collapse" property for liveblog modules
 
 
 3.36.0 (2018-03-22)
