Back to development: 3.37.1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.37.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.37.0 (2018-04-03)
 -------------------
 
