--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.37.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.37.1 (2018-04-09)
 -------------------
 
