--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.38.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.38.0 (2018-04-20)
 -------------------
 
