--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.38.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- MAINT: Update to changed CP API
 
 
 3.38.1 (2018-04-23)
