Back to development: 3.38.5

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.38.5 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.38.4 (2018-06-08)
 -------------------
 
