Back to development: 3.38.6

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.38.6 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.38.5 (2018-08-06)
 -------------------
 
