--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 zeit.content.article changes
 ============================
 
-3.38.5 (unreleased)
+3.39.0 (unreleased)
 -------------------
 
-- Nothing changed yet.
+-ZON-3482: Use xml config instead of article for breaking news banner
 
 
 3.38.4 (2018-06-08)
