--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.39.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-3312: Remove deprecated fields from ICommonMetadata
 
 
 3.39.2 (2018-09-25)
