--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.39.3 (unreleased)
 -------------------
 
-- ZON-3312: Remove deprecated fields from ICommonMetadata
+- ZON-3312: Remove deprecated fields from ICommonMetadata, asset badges
 
 
 3.39.2 (2018-09-25)
