--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ zeit.content.article changes
 -------------------
 
 - ZON-3312: Remove deprecated fields from ICommonMetadata, asset badges,
-  aggregate comments
+  aggregate comments, lead teaser assets
 
 
 3.39.2 (2018-09-25)
