--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.39.4 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.39.3 (2018-10-05)
 -------------------
 
