FIX: Treat empty CPs set as IArticle.layout as existing, not as missing
This cannot have worked for quite a while, since bool(cp) goes to
len(cp), which delegates to cp.body since at least ICP2015.

(Tests used to have lead/informatives areas though, and thus body was
non-empty, so it didn't fail.)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.40.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- FIX: Treat empty CPs set as IArticle.layout as existing, not as missing
 
 
 3.40.0 (2018-11-02)
