--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.41.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- FIX: brown-bag 3.41.0
 
 
 3.41.0 (2018-11-14)
