--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.41.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- BUG-1010: Set default header_layout when template is changed
 
 
 3.41.2 (2018-11-20)
