Back to development: 3.42.1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.42.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.42.0 (2018-12-18)
 -------------------
 
