BUG-977: Handle the edge case that the node the user clicked on is one which we need to translate (em/i, strong/b).
Since changing the tag name is impossible (right?), translating means
swapping out the node; so we need to propagate this because otherwise
we're left holding a reference to a node that's not part of the DOM anymore.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ zeit.content.article changes
 3.42.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- BUG-977: Handle the edge case that the node the user clicked on is one
+  which we need to translate (em/i, strong/b).
 
 
 3.42.0 (2018-12-18)
