Back to development: 3.42.3

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.42.3 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.42.2 (2019-01-07)
 -------------------
 
