--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,12 @@
 zeit.content.article changes
 ============================
 
-3.42.3 (unreleased)
+3.43.0 (unreleased)
 -------------------
 
 - ZON-5075: Styling for additional twitter print fields
+
+- ZON-5025: Add adplace module
 
 
 3.42.2 (2019-01-07)
