ZON-5017: Add breaking news flag to facebook push

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.43.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-5017: Add breaking news flag to facebook push
 
 
 3.43.0 (2019-01-11)
