--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.43.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-2932: Add parameters to embed module form
 
 
 3.43.0 (2019-01-11)
