--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,16 @@
 zeit.content.article changes
 ============================
 
-3.43.1 (unreleased)
+3.44.0 (unreleased)
 -------------------
 
 - ZON-2932: Add parameters to embed module form
+
+
+3.43.1 (2019-02-05)
+-------------------
+
+- ZON-2932: Allow direct drag&drop for embed objects as well
 
 
 3.43.0 (2019-01-11)
