--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.44.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-2932: Style embed helptext field
 
 
 3.44.2 (2019-02-13)
