--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.44.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- MAINT: Publish breaking news with the same priority as the homepage
 
 
 3.44.2 (2019-02-13)
