--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 zeit.content.article changes
 ============================
 
-3.44.4 (unreleased)
+3.45.0 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-5187: Add topic box article module
 
 
 3.44.3 (2019-02-19)
