--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.44.4 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- PERF: Don't grok browser packages by default
 
 
 3.44.3 (2019-02-19)
