Back to development: 3.44.5

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.44.5 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.44.4 (2019-03-29)
 -------------------
 
