--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.44.5 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-5168: Add additional Adplaces for ad-modul
 
 
 3.44.4 (2019-03-29)
