--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.44.6 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.44.5 (2019-04-02)
 -------------------
 
