--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.45.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.45.0 (2019-04-03)
 -------------------
 
